[package]
name = "twitch_ts"
version = "0.1.0"
authors = ["Csatacsirke <battlechicken74@gmail.com>"]
edition = "2018"

#[lib]
#crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irc = "0.15"
futures = "0.3"
failure = "0.1.8"

